--- a/.env
+++ b/.env
@@ -23,8 +23,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=e84da1f7d6e2d2
+MAIL_PASSWORD=cf0ef06de10201
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
