--- a/.env
+++ b/.env
@@ -20,12 +20,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=mailgun
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=e84da1f7d6e2d2
 MAIL_PASSWORD=cf0ef06de10201
 MAIL_ENCRYPTION=null
+
+MAILGUN_DOMAIN=[pubkey-b49cb0470493257a464048b1f052a964]
+MAILGUN_SECRET=[key-c439e550eec2cd5849770d0f99bb2c92]
 
 PUSHER_APP_ID=
 PUSHER_KEY=
