Mail can be sent, added a basic layout for mails.

--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ MAIL_USERNAME=e84da1f7d6e2d2
 MAIL_PASSWORD=cf0ef06de10201
 MAIL_ENCRYPTION=null
 
-MAILGUN_DOMAIN=[pubkey-b49cb0470493257a464048b1f052a964]
-MAILGUN_SECRET=[key-c439e550eec2cd5849770d0f99bb2c92]
+MAILGUN_DOMAIN=sandbox5479acc151794fb7bb02d7f9b38cb92d.mailgun.org
+MAILGUN_SECRET=key-c439e550eec2cd5849770d0f99bb2c92
 
 PUSHER_APP_ID=
 PUSHER_KEY=
