--- a/.env
+++ b/.env
@@ -20,12 +20,15 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=mailgun
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=e84da1f7d6e2d2
 MAIL_PASSWORD=cf0ef06de10201
 MAIL_ENCRYPTION=null
+
+MAILGUN_DOMAIN=sandbox5479acc151794fb7bb02d7f9b38cb92d.mailgun.org
+MAILGUN_SECRET=key-c439e550eec2cd5849770d0f99bb2c92
 
 PUSHER_APP_ID=
 PUSHER_KEY=
